--- a/course-02/exercises/udacity-c2-restapi/package.json
+++ b/course-02/exercises/udacity-c2-restapi/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "start": "node server.js",
     "tsc": "tsc",
-    "dev": "ts-node-dev ./src/server.ts",
     "prod": "tsc && node ./www/server.js",
     "clean": "rimraf www/ || true",
-    "build": "npm run clean && tsc && cp -rf src/config www/config && cp .npmrc www/.npmrc && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
+    "build": "npm run clean && tsc && copy package.json www\\package.json && mkdir www\\tmp\\ && cd www && zip -r Archive.zip . && cd ..",
+    "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,8 +17,8 @@
   "license": "ISC",
   "dependencies": {
     "@types/bcrypt": "^5.0.0",
-    "@types/jsonwebtoken": "^9.0.0",
-    "aws-sdk": "^2.1284.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "aws-sdk": "^2.1295.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "dotenv": "^16.0.3",
@@ -39,7 +39,7 @@
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
     "mocha": "^10.2.0",
-    "rimraf": "^3.0.2",
+    "rimraf": "^4.0.5",
     "rollup-plugin-livereload": "^2.0.5",
     "ts-node-dev": "^2.0.0",
     "tslint": "^5.20.1",
